แก้ไข province - close  #262
