# backend/controllers/province_controller.go
@@ -2,12 +2,14 @@ package controllers
 
 import (
 	"context"
+	"fmt"
 	"strconv"
 
 	"github.com/gin-gonic/gin"
 	"github.com/sut63/team17/app/ent"
 	"github.com/sut63/team17/app/ent/continent"
 	"github.com/sut63/team17/app/ent/country"
+	"github.com/sut63/team17/app/ent/province"
 	"github.com/sut63/team17/app/ent/region"
 )
 
@@ -16,14 +18,16 @@ type ProvinceController struct {
 	router gin.IRouter
 }
 
+//Province struct
 type Province struct {
-	Province    string
-	District    string
-	Subdistrict string
-	Postal      int
-	Region      int
-	Continent   int
-	Country     int
+	Prov string
+	Dist string
+	Subd string
+	Post string
+	Regi int
+	Coun int
+	Cont int
+
 }
 
 // CreateProvince handles POST requests for adding province entities
@@ -37,65 +41,67 @@ type Province struct {
 // @Failure 400 {object} gin.H
 // @Failure 500 {object} gin.H
 // @Router /provinces [post]
-func (ctl *ProvinceController) ProvinceCreate(c *gin.Context) {
+func (ctl *ProvinceController) CreateProvince(c *gin.Context) {
 	obj := Province{}
 	if err := c.ShouldBind(&obj); err != nil {
 		c.JSON(400, gin.H{
-			"error": "province binding failed",
+			"status": false,
+			"error":  "province binding failed",
 		})
 		return
 	}
-
-	cu, err := ctl.client.Country.
+	count, err := ctl.client.Country.
 		Query().
-		Where(country.IDEQ(int(obj.Country))).
+		Where(country.IDEQ(int(obj.Coun))).
 		Only(context.Background())
 
 	if err != nil {
 		c.JSON(400, gin.H{
-			"error": "country not found",
+			"status": false,
+			"error":  "user not found",
 		})
 		return
 	}
-
-	cn, err := ctl.client.Continent.
+	conti, err := ctl.client.Continent.
 		Query().
-		Where(continent.IDEQ(int(obj.Continent))).
+		Where(continent.IDEQ(int(obj.Cont))).
 		Only(context.Background())
 
 	if err != nil {
 		c.JSON(400, gin.H{
-			"error": "continent not found",
+			"status": false,
+			"error":  "user not found",
 		})
 		return
 	}
-
-	re, err := ctl.client.Region.
+	regio, err := ctl.client.Region.
 		Query().
-		Where(region.IDEQ(int(obj.Region))).
+		Where(region.IDEQ(int(obj.Regi))).
 		Only(context.Background())
 
 	if err != nil {
 		c.JSON(400, gin.H{
-			"error": "region not found",
+			"status": false,
+			"error":  "user not found",
 		})
 		return
 	}
-
+	
 	save, err := ctl.client.Province.
 		Create().
-		SetProvince(obj.Province).
-		SetDistrict(obj.District).
-		SetSubdistrict(obj.Subdistrict).
-		SetPostal(obj.Postal).
-		SetProvCoun(cu).
-		SetProvCont(cn).
-		SetProvRegi(re).
+		SetDistrict(obj.Dist).
+		SetSubdistrict(obj.Subd).
+		SetPostal(obj.Post).
+		SetProvince(obj.Prov).
+		SetProvCont(conti).
+		SetProvCoun(count).
+		SetProvRegi(regio).
 		Save(context.Background())
-
 	if err != nil {
+		fmt.Println(err)
 		c.JSON(400, gin.H{
-			"error": "saving failed",
+			"status": false,
+			"error":  err,
 		})
 		return
 	}
@@ -104,6 +110,40 @@ func (ctl *ProvinceController) ProvinceCreate(c *gin.Context) {
 		"status": true,
 		"data":   save,
 	})
+}
+
+// GetProvince handles GET requests to retrieve a province entity
+// @Summary Get a province entity by ID
+// @Description get province by ID
+// @ID get-province
+// @Produce  json
+// @Param id path int true "Province ID"
+// @Success 200 {object} ent.Province
+// @Failure 400 {object} gin.H
+// @Failure 404 {object} gin.H
+// @Failure 500 {object} gin.H
+// @Router /provinces/{id} [get]
+func (ctl *ProvinceController) GetProvince(c *gin.Context) {
+	id, err := strconv.ParseInt(c.Param("id"), 10, 64)
+	if err != nil {
+		c.JSON(400, gin.H{
+			"error": err.Error(),
+		})
+		return
+	}
+	u, err := ctl.client.Province.
+		Query().
+		Where(province.IDEQ(int(id))).
+		Only(context.Background())
+
+	if err != nil {
+		c.JSON(404, gin.H{
+			"error": err.Error(),
+		})
+		return
+	}
+
+	c.JSON(200, u)
 }
 
 // ListProvince handles request to get a list of province entities
@@ -136,22 +176,23 @@ func (ctl *ProvinceController) ListProvince(c *gin.Context) {
 		}
 	}
 
-	provinces, err := ctl.client.Province.
+	provincess, err := ctl.client.Province.
 		Query().
-		WithProvCoun().
 		WithProvCont().
+		WithProvCoun().
 		WithProvRegi().
-		WithProvStud().
 		Limit(limit).
 		Offset(offset).
 		All(context.Background())
 
 	if err != nil {
-		c.JSON(400, gin.H{"error": err.Error()})
+		c.JSON(400, gin.H{
+			"error": err.Error(),
+		})
 		return
 	}
 
-	c.JSON(200, provinces)
+	c.JSON(200, provincess)
 }
 
 // NewProvinceController creates and registers handles for the province controller
@@ -160,15 +201,18 @@ func NewProvinceController(router gin.IRouter, client *ent.Client) *ProvinceCont
 		client: client,
 		router: router,
 	}
+
 	pvc.register()
+
 	return pvc
+
 }
 
-// InitProvinceController registers routes to the main engine
 func (ctl *ProvinceController) register() {
-	provinces := ctl.router.Group("/provinces")
-
+	province := ctl.router.Group("/provinces")
+	province.GET("", ctl.ListProvince)
 	// CRUD
-	provinces.POST("", ctl.ProvinceCreate)
-	provinces.GET("", ctl.ListProvince)
+	province.POST("", ctl.CreateProvince)
+	province.GET(":id", ctl.GetProvince)
+
 }
